[package]
name = "bindgen-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
bindgen = { git = "https://github.com/mxyns/rust-bindgen", branch = "extended-callbacks", version = "0.68.1" }
proc-macro2 = "1.0.67"
toml = "0.8.2"
toml_edit = "0.20.2"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
quote = "1.0.33"

[dev-dependencies]
phf_macros = "0.11.2"